--- a/Dashboard.css
+++ b/Dashboard.css
@@ -1,15 +1,22 @@
 .dashboardContent {
     padding: 10px 20px;
-    
-}
+    overflow-y: auto;
 
-.cardsContainer {
-    height: 85%;
+}
+#spinner {
     display: flex;
-    flex-direction: column;
-    padding-bottom: 10px;
+    justify-content: center;
+    align-items: center;
+    width: 64px;
+    height: 64px;
 }
-
+.cardsContainer {
+    display: grid;
+    grid-template-rows: 50% 50%;
+}
+.noOfProductsText{
+    color: #00568B ;
+}
 
 .cardRows1 {
     height: 100%;
@@ -28,48 +35,68 @@
     gap: 20px;
 }
 
+/* .piechartcontainer{
+min-width: 40% !important;
+} */
 .activeStatusCards {
     width: 100%;
-    display: flex;
+    height: 100%;
+    display: grid;
     flex-direction: column;
     gap: 20px;
 }
 
+.cameraList {
+    overflow-y: auto;
+    max-height: 250px;
+    scrollbar-width: none;
+
+}
+.cameraList ::-webkit-scrollbar {
+    display: none !important;
+  }
 .cards {
     background-color: rgb(255, 255, 255);
-    height:-webkit-fill-available;
+    height: 100%;
     border-radius: 10px;
 }
-.innerCard{
+
+.innerCard {
     background-color: rgb(184, 248, 159);
     height: 100%;
     margin: 20px;
 }
-.totalUsersCard{
+
+.totalUsersCard {
     display: grid;
     grid-template-rows: 50% 50%;
     height: 100%;
 }
-.toatlUsers{
-padding: 30px;
+
+.toatlUsers {
+    padding: 30px;
 }
-.usersByMobile{
+
+.usersByMobile {
     border-top: 2px dashed;
     border-color: #c2c2c2;
     padding: 20px;
 }
+
 #myChart {
     height: 360px !important;
     width: 360px !important;
 }
-.errorContainer{
+
+.errorContainer {
     background-color: #F5BFBF;
     color: #D80000;
     padding: 5px 10px;
-    border-radius: 5px ;
-    margin-top: 10px ;
+    border-radius: 5px;
+    margin-top: 10px;
 }
-.successContainer{
+
+.successContainer {
     background-color: #C9E7BF;
     color: #2AA100;
     padding: 5px 10px;
