--- a/cameraUserdetails.css
+++ b/cameraUserdetails.css
@@ -3,7 +3,7 @@
 font-family: "Montserrat", sans-serif;
  margin: 0;
  padding: 0;
- background-color: #F0F0F0;
+ background-color: #F0F0F0 !important;
  }
  
 /* #Logout-modal .Logout-content {
